<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/prompt" />
    

    <TextView
        android:id="@+id/date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="GET THE PHONE DATE AND STICK IT HERE"/>
    
    <TextView
        android:text="@string/location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <EditText
        android:id="@+id/location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/fossilName" />

    <EditText
        android:id="@+id/fossilName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/notes" />

    <EditText
        android:id="@+id/notes"
        android:singleLine="false" 
        android:lines="3"
        android:layout_width="fill_parent"
        android:layout_height="100dip"
        android:scrollbars="vertical"
        android:layout_marginBottom="10dip" />
    
    <Button
        android:id="@+id/send_metadata"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/metadata_btn" />

</LinearLayout>
</ScrollView>